Hopefully fix my stupid repo!
I did something with branches and now it is messed up...

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -155,8 +155,92 @@ html {
 }
 
 @media only screen and (max-width: 840px) {
+  .container {
+    display: flex;
+    flex-flow: column;
+    position: relative;
+    margin: 24px;
+    width: 100vw;
+    height: auto;
+  }
+  
+  .header {
+    align-content: center;
+    border-radius: 6px;
+    width: auto;
+    height: 135px;
+    overflow: auto;
+    padding: 8px;
+  
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: italic;
+    font-weight: bold;
+  }
+  
   .img {
     display: none;
+  }
+  
+  .site {
+    background-color: var(--color-div-background);
+    border: 3px solid var(--color-div-border);
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    padding: 8px;
+  }
+  
+  .dcBot {
+    background-color: var(--color-div-background);
+    border: 3px solid var(--color-div-border);
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    padding: 8px;
+  }
+  
+  .taps {
+    background-color: var(--color-div-background);
+    border: 3px solid var(--color-div-border);
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    padding: 8px;
+  }
+  
+  .tmp {
+    background-color: var(--color-div-background);
+    border: 3px solid var(--color-div-border);
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    padding: 8px;
+  }
+  
+  .footer {
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    padding: 8px;
+  }
+  
+  .nav {
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-div-background);
+    border: 3px solid var(--color-div-border);
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    padding: 8px;
   }
   
 }
@@ -165,6 +249,7 @@ a {
   color: var(--color-link);
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: underline;
 }
